2006-10-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Modified the TextDocCol constructur and various parsers. It
	is now modular and supports various file formats via plugins (see
	the new "Source" class).

2006-10-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Revised documentation after previous code changes.

2006-10-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Remaining changes as discussed with David.

2006-10-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Some changes as suggested by David. The rest will follow
	within the next days.

2006-09-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Finished documentation.

2006-09-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Wrote some documentation.

2006-09-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Further syntactic sugar in form of additional assignment and
	accessor methods.

2006-09-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Syntactic sugar in form of "length", "show" and "summary"
	operators.

2006-08-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Diverse updates. Mainly on default operators ("[" or "c")
	and dissimilarities.

2006-08-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Added similarity functions.

	* data/: Added english stopwords.

2006-08-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* data/: Examples compiled for new features

	* R/: Changes due to new structure.

	* NAMESPACE: Corrected namespace to reflect new structure.

	* R/termdocmatrix.R: Adapted for new naming scheme.

2006-08-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Adapted code for new class structure. Wrote
	several transform and filter functions operating on text document
	collections (alias text document databases).

	* R/aobjects.R: Adapted class structure with inheritance,
	repositories and additional meta data. Loading files on demand is
	now possible.

2006-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Some cosmetic cleanups.
